kanc_pamoi/src/tests/sample_code/should_fail/multi_file/bind/leaky_let_value/src/mod.k
pub type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let priv_S = Nat.s;

pub let(*) plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        o => b,
        s(a') => priv_S(plus(a', b)),
    }
};
